--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
+# For H2
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+
+# For MySQL
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_final?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/agency_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=agency_admin
+spring.datasource.password=agency_admin
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
